prusti-tests/tests/runtime_checks/fail/predicates/check-error.stderr
error: [Prusti: invalid specification] Referring to predicate that is not runtime checkable in specifications that should be runtime checked is not allowed
  --> $DIR/check-error.rs:14:12
   |
14 | #[requires(some_pred(_x))]
   |            ^^^^^^^^^
   |
note: this predicate can not be checked at runtime, make sure it has a body and mark it with #[insert_runtime_check]
  --> $DIR/check-error.rs:6:5
   |
6  | /     fn some_pred(x: i32) -> bool {
7  | |         x == 42
8  | |     }
   | |_____^

error: [Prusti: invalid specification] Referring to predicate that is not runtime checkable in specifications that should be runtime checked is not allowed
  --> $DIR/check-error.rs:20:43
   |
20 |     prusti_assert!(#[insert_runtime_check]some_pred(x))
   |                                           ^^^^^^^^^
   |
note: this predicate can not be checked at runtime, make sure it has a body and mark it with #[insert_runtime_check]
  --> $DIR/check-error.rs:6:5
   |
6  | /     fn some_pred(x: i32) -> bool {
7  | |         x == 42
8  | |     }
   | |_____^

error: aborting due to 2 previous errors

